Fix z-index

--- a/app/assets/stylesheets/admin/blocks/_notifications.scss
+++ b/app/assets/stylesheets/admin/blocks/_notifications.scss
@@ -3,7 +3,7 @@
   padding: 1.5rem;
   position: fixed;
   right: 0;
-  z-index: 1000000;
+  z-index: 39;
 
   .notification {
     backdrop-filter: blur(25px);
